// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - TasksList When there are tasks renders correctly 1`] = `
Array [
  <header
    color="paper"
    type="back"
  >
    <AvatarHeader
      newbieId="1234"
      taskProgress={0}
    />
    <Tabs
      centered={true}
      indicatorColor="primary"
      onChange={[Function]}
      textColor="primary"
      value={0}
      variant="fullWidth"
    >
      <Tab
        label="Newbie tasks"
      />
      <Tab
        label="My tasks"
      />
    </Tabs>
  </header>,
  <Box
    component="main"
    data-testid="task-list-page"
    flex={1}
    padding="2rem 2rem 5rem 3rem"
  >
    <TabPanel
      index={0}
      value={0}
    >
      <TaskTabsContent
        loading={true}
        onChange={[Function]}
        tabIndex={0}
      />
    </TabPanel>
    <TabPanel
      index={1}
      value={0}
    >
      <TaskTabsContent
        loading={true}
        onChange={[Function]}
        tabIndex={0}
      />
    </TabPanel>
    <AddTaskOptions
      newbieId="1234"
      title="Add New Task"
      to={
        Object {
          "pathname": "/buddy/newbies/1234/add-task",
          "state": Object {
            "tabIndex": 0,
          },
        }
      }
    />
  </Box>,
]
`;

exports[`Component - TasksList When there are tasks renders correctly 2`] = `
Array [
  <header
    color="paper"
    type="back"
  >
    <AvatarHeader
      newbieId="1234"
      taskProgress={0}
    />
    <Tabs
      centered={true}
      indicatorColor="primary"
      onChange={[Function]}
      textColor="primary"
      value={0}
      variant="fullWidth"
    >
      <Tab
        label="Newbie tasks"
      />
      <Tab
        label="My tasks"
      />
    </Tabs>
  </header>,
  <Box
    component="main"
    data-testid="task-list-page"
    flex={1}
    padding="2rem 2rem 5rem 3rem"
  >
    <TabPanel
      index={0}
      value={0}
    >
      <TaskTabsContent
        loading={false}
        onChange={[Function]}
        tabIndex={0}
      />
    </TabPanel>
    <TabPanel
      index={1}
      value={0}
    >
      <TaskTabsContent
        loading={false}
        onChange={[Function]}
        tabIndex={0}
      />
    </TabPanel>
    <AddTaskOptions
      newbieId="1234"
      title="Add New Task"
      to={
        Object {
          "pathname": "/buddy/newbies/1234/add-task",
          "state": Object {
            "tabIndex": 0,
          },
        }
      }
    />
  </Box>,
]
`;

exports[`Component - TasksList when there are not tasks should render empty state 1`] = `
Array [
  <header
    color="paper"
    type="back"
  >
    <AvatarHeader
      newbieId="1234"
      taskProgress={0}
    />
    <Tabs
      centered={true}
      indicatorColor="primary"
      onChange={[Function]}
      textColor="primary"
      value={0}
      variant="fullWidth"
    >
      <Tab
        label="Newbie tasks"
      />
      <Tab
        label="My tasks"
      />
    </Tabs>
  </header>,
  <Box
    component="main"
    data-testid="task-list-page"
    flex={1}
    padding="2rem 2rem 5rem 3rem"
  >
    <TabPanel
      index={0}
      value={0}
    >
      <TaskTabsContent
        loading={false}
        onChange={[Function]}
        tabIndex={0}
      />
    </TabPanel>
    <TabPanel
      index={1}
      value={0}
    >
      <TaskTabsContent
        loading={false}
        onChange={[Function]}
        tabIndex={0}
      />
    </TabPanel>
    <AddTaskOptions
      newbieId="1234"
      title="Add New Task"
      to={
        Object {
          "pathname": "/buddy/newbies/1234/add-task",
          "state": Object {
            "tabIndex": 0,
          },
        }
      }
    />
  </Box>,
]
`;
